[package]
name = "github-actions-flake8"
version = "0.1.1-alpha.1"
edition = "2021"
authors = ["Mick van Gelderen <mvgelderen@rocsys.com>"]
description = """
This action emits Github Action instructions for `flake8` output.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
regex = "1.5.6"
